--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello World</title>
-    <script src="https://unpkg.com/react@latest/dist/react.js"></script>
-    <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <script src="assets/js/react.js"></script>
+    <script src="assets/js/react-dom.js"></script>
+    <script src="assets/js/babel.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/custom.css"/>
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/babel" src="my.js" data-presets="es2015,react"></script>
+    <script type="text/babel" src="product.js" data-presets="es2015,react"></script>
   </body>
 </html>
